# poetry-demo2

./: .gitignore  pyproject.toml
poetry_demo2/: poetrydemo2.py  snek.py
tests/: test_poetry_demo2.py
