[tool.poetry]
name = "poetry-demo2"
version = "0.1.0"
description = ""
authors = ["macurandb <macurandb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
